Extend report API with commentId and replayId. And set tables to be snake_case.
